<resources>
    <string name="app_name">Trabajo</string>
    <string name="edit_message">Enter a message</string>
    <string name="edit_message3">Enter a message</string>
    <string name="button_send">Ingresar</string>
    <string name="edit_message2">Enter a message</string>
    <string name="Info1">Ingresa tu correo</string>
    <string name="info2">Ingresa tu contraseña</string>
    <string name="info3">Repite tu contraseña</string>
    <string name="info4">Nuestras Redes</string>
    <string name="item1">Notificaciones</string>
    <string name="item2">Perfil</string>
    <string name="item3">cerrar sesión</string>
</resources>